2020-03-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.7

2020-03-08  Leonardo Silvestri <lsilvestri@ztsdb.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/utilities.cpp (_RcppCCTZ_convertToCivilSecond): Throw if
	timezone not found

2019-11-15  Leonardo Silvestri <lsilvestri@ztsdb.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/utilities.cpp: Added functions _RcppCCTZ_convertToCivilSecond that
          converts a time point to the number of seconds since epoch, and
	  _RcppCCTZ_convertToTimePoint that converts a number of seconds
          since epoch into a time point
	* src/RcppExports.cpp: Export the above functions at C level

2019-09-07  Leonardo Silvestri <lsilvestri@ztsdb.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/utilities.cpp: Added function _RcppCCTZ_getOffset to return
	the offset at a time-point for a specific timezone
	* src/RcppExports.cpp: Export the above function at C level

2019-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.6

        * DESCRIPTION (Suggests): Added tinytest
        * .travis.yml (install): Install tinytest

        * tests/tinytest.R: New test driver using tinytest
	* test/doRUnit.R: Removed

        * inst/tinytest/test_format.R: Converted from RUnit
        * inst/tinytest/test_parse.R: Idem
        * inst/tinytest/test_tz.R: Idem

	* README.md (tinytest): Added dependency badge, add installation
	paragraph, add continued testing post-installation via tinytest

2019-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/*: Synchronized with upstream CCTZ release 2.3
	* inst/include/cctz/*: Idem

	* src/time_zone_format.cc: Carry std::get_time patch forward
	* src/zone_info_source.cc: Carry forward no linking ZoneInfoSourceFactory

	* local/cctz-20181003/: Renamed from local/cctz to show release date
	* local/cctz-20190702/: Added
