@@ -1,8 +1,8 @@
 Package: RcppCCTZ
 Type: Package
 Title: 'Rcpp' Bindings for the 'CCTZ' Library
-Version: 0.2.7
-Date: 2020-03-18
+Version: 0.2.8
+Date: 2020-08-03
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: 'Rcpp' Access to the 'CCTZ' timezone library is provided. 'CCTZ' is
@@ -24,6 +24,6 @@ URL: https://github.com/eddelbuettel/rcppcctz
 BugReports: https://github.com/eddelbuettel/rcppcctz/issues
 RoxygenNote: 6.0.1
 NeedsCompilation: yes
-Packaged: 2020-03-18 20:33:04.369576 UTC; edd
+Packaged: 2020-08-04 15:21:15.78860 UTC; edd
 Repository: CRAN
-Date/Publication: 2020-03-18 21:40:02 UTC
+Date/Publication: 2020-08-04 23:12:30 UTC
