@@ -3,6 +3,13 @@
 \newcommand{\ghpr}{\href{https://github.com/eddelbuettel/rcppcctz/pull/#1}{##1}}
 \newcommand{\ghit}{\href{https://github.com/eddelbuettel/rcppcctz/issues/#1}{##1}}
 
+\section{Changes in version 0.2.8 (2020-08-04)}{
+  \itemize{
+    \item Added three new \code{nothrow} variants (needed for win32) needed 
+    by the expanded \pkg{nanotime} package (Leonardo in \ghpr{37})
+  }
+}
+
 \section{Changes in version 0.2.7 (2020-03-18)}{
   \itemize{
     \item Added functions \code{_RcppCCTZ_convertToCivilSecond} that
