@@ -1,3 +1,14 @@
+2020-08-03 Leonardo Silvestri <lsilvestri@ztsdb.org>
+
+	* DESCRIPTION (Version, Date): Release 0.2.8
+
+	* src/utilities.cpp: No-throw versions of callable C functions for Win-32
+	* src/RcppExports.cpp: Idem
+
+2020-05-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Add 'last commit' badge
+
 2020-03-18  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.2.7
